<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deli_ordering"
            android:textSize="24sp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="195dp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-medium"
            android:textFontWeight="600"

    />

    <SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/searchBar"
            android:layout_below="@+id/title"
            android:layout_marginTop="23dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
    >
    </SearchView>


    <HorizontalScrollView
            android:id="@+id/categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/searchBar"
            android:fillViewport="true"
            android:scrollbars="none">

        <RelativeLayout android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:isScrollContainer="true">

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/DesktopLayout"
                    android:layout_marginLeft="22dp"
            >

                <ImageButton
                        android:id="@+id/Desktops"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:background="@color/colorPrimary"

                />

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/desktops"
                          android:textSize="14sp"
                          android:layout_below="@+id/Desktops"
                          android:layout_centerInParent="true"
                          android:fontFamily="sans-serif-medium"
                />

            </RelativeLayout>

            <RelativeLayout
                    android:id="@+id/LaptopLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/DesktopLayout"
                    android:layout_marginLeft="28dp"
            >
                <ImageButton
                        android:id="@+id/laptops"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:background="@color/colorPrimary"
                />

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/laptops"
                          android:textSize="14sp"
                          android:layout_below="@+id/laptops"
                          android:fontFamily="sans-serif-medium"
                          android:layout_centerInParent="true"
                />
            </RelativeLayout>

            <RelativeLayout
                    android:id="@+id/TabletLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/LaptopLayout"
                    android:layout_marginLeft="28dp">

                <ImageButton
                        android:id="@+id/Tablets"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:background="@color/colorPrimary"
                />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tablets"
                        android:textSize="14sp"
                        android:fontFamily="sans-serif-medium"
                        android:layout_centerInParent="true"
                        android:layout_below="@+id/Tablets"
                />

            </RelativeLayout>


            <RelativeLayout
                    android:id="@+id/PhoneLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/TabletLayout"
                    android:layout_marginLeft="28dp"
            >
                <ImageButton
                        android:id="@+id/phones"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:background="@color/colorPrimary"
                />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_below="@+id/phones"
                        android:layout_centerInParent="true"
                        android:text="@string/phones"
                        android:fontFamily="sans-serif-medium"
                />

            </RelativeLayout>


            <RelativeLayout
                    android:id="@+id/CameraLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/PhoneLayout"
                    android:layout_marginLeft="28dp"
            >
                <ImageButton
                        android:id="@+id/cameras"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:background="@color/colorPrimary"
                />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cameras"
                        android:fontFamily="sans-serif-medium"
                        android:textSize="14sp"
                        android:layout_below="@+id/cameras"
                        android:layout_centerInParent="true"
                />

            </RelativeLayout>

            <RelativeLayout
                    android:id="@+id/accessoriesLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/CameraLayout"
                    android:layout_marginRight="22dp"
                    android:layout_marginLeft="28dp"
            >
                <ImageButton
                        android:id="@+id/accessories"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:background="@color/colorPrimary"
                />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/accessories"
                        android:fontFamily="sans-serif-medium"
                        android:textSize="14sp"
                        android:layout_centerInParent="true"
                        android:layout_below="@+id/accessories"
                />
            </RelativeLayout>

        </RelativeLayout>

    </HorizontalScrollView>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/categories"
    >

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
        >
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginLeft="22dp"
                    android:layout_marginRight="22dp"
            />

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginLeft="22dp"
                    android:layout_marginRight="22dp"
                    android:layout_marginTop="25dp"
            />

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginLeft="22dp"
                    android:layout_marginRight="22dp"
                    android:layout_marginTop="25dp"
            />

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginLeft="22dp"
                    android:layout_marginRight="22dp"
                    android:layout_marginTop="25dp"
            />


        </LinearLayout>

    </ScrollView>


</RelativeLayout>